# Bennu

./: .gitattributes  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: future-release.yml  main.yml  release.yml
cmake/: bennu_version.cmake  bennu_version.hpp.in
doc/: decision-diary.md  level1.md  level3-pr-pilot-a.md  level3-pr-pilot-b.md  level3-protection-final-probe.md  level_3_ideas.md
doc/decisions/: README.md  TEMPLATE.md  issue-38-node24-actions.md  issue-43-structural-tuples-profile-v2.md  issue-44-explicit-sequential-fanout.md  issue-45-value-independent-typed-lowering.md  issue-46-program-parameter-bindings.md  issue-47-runner-argument-decoding.md  issue-49-structural-tuple-foundation.md  issue-54-boolean-predicates-ordering.md  issue-55-checked-arithmetic.md  issue-58-checkout-runtime.md  issue-64-latest-base-tree-identity.md  issue-65-per-issue-decision-records.md  legacy-decision-diary.md
doc/decisions/evidence/issue-33/: README.md
doc/evidence/issue-33/: complexity.csv  metadata.json  raw.csv  summary.csv
examples/: rewrite.bennu
include/bennu/: application.hpp  c_emitter.hpp  error.hpp  evaluator.hpp  host_storage.hpp  native_builder.hpp  path_encoding.hpp  primitive.hpp  primitive_id.hpp  resources.hpp  type.hpp  value.hpp
spec/: bennu-spec-0001-implementation-plan.md  bennu-spec-0001-scalar-lifting.md  bennu-spec-0002-application-and-literal-syntax.md  bennu-spec-0003-scalar-domain-semantics.md  bennu-spec-0004-execution-profiles.md  bennu-spec-0005-program-parameters.md  bennu-spec-0006-structural-tuples-and-profile-v2.md  bennu-spec-0007-explicit-sequential-fanout.md
src/: application.cpp  bennu-version.rc.in  bennu.exe.manifest  c_emitter.cpp  cli_output.cpp  cli_output.hpp  error.cpp  evaluator.cpp  main.cpp  native_builder.cpp  path_encoding.cpp  primitive.cpp  resources.cpp  rewrite.cpp  rewrite_backend.cpp  rewrite_backend.hpp  rewrite_c_runtime.cpp  rewrite_c_runtime.hpp  runner_arguments.hpp  type.cpp  typed_application.hpp  value.cpp
tests/: application_section16_conformance.cpp  c_emission_contract.cmake  c_emission_negative.cmake  c_emitter_test.cpp  checkout_workflows.cmake  checkout_workflows_negative.cmake  cli_contract.cmake  doctest_topology.cmake  documentation_smoke.cmake  evaluator_test.cpp  fake_c_compiler.cpp  future_release_publication_test.py  future_release_workflow.cmake  issue54_primitives.cpp  linux_compatibility_test.py  linux_package_contract.cmake  main_workflow.cmake  main_workflow_negative.cmake  native_build_contract.cmake  native_build_fake_process.cmake  native_builder_test.cpp  obsolete_surface_contract.cmake  public_cutover_conformance.cpp  public_path_error_matrix.cmake  public_resource_contract.cmake  public_resource_fixture.cpp  release_provenance_test.py  release_publication_test.py  release_workflow.cmake  required_tuple_traceability.cmake  rewrite_backend_contract.cmake  rewrite_backend_test_driver.cpp  runner_arguments_contract.cmake  source_output_alias_contract.cmake  spec-traceability.tsv  spec_traceability.cmake  spec_traceability_negative.cmake  spec_traceability_tuple_negative.cmake  stable_version_contract.cmake  stdout_failure_contract.cmake  (+9 more)
tests/fixtures/: level1-example.bennu  level1-example.c  level1-example.out  linux-abi-compatible.json  linux-abi-incompatible.json  public-path-success.bennu  public-path-success.out  rewrite-example.out  rewrite_conformance_fixture.inc  rewrite_evaluator_conformance_fixture.inc
tools/issue33/: README.md  benchmark.py  prototype.cpp
tools/release/: package-and-smoke.ps1  package-linux.sh  provenance.py  publish-future-release.sh  publish-release.sh  verify-clean-windows-package.ps1  verify-linux-elf.py  verify-linux-package.sh
